--- a/Project_prototype/index.html
+++ b/Project_prototype/index.html
@@ -30,7 +30,7 @@
 
     <img
       src="https://via.placeholder.com/800x600/"
-      alt="This is some alt text"
+      alt="This is an image containing the text 800 by 600"
     />
 
     <script>
@@ -40,10 +40,8 @@
       });
     </script>
 
-    <div id="tail"><div class="child" id="sketch1" onclick="location.href='http://www.breadsnake.com/contact';"></div></div>
-    <script src=".\scetch.js"></script>
-
-
+    <div id="tail"><div class="child" id="sketch1"></div></div>
+    <script src=".\arrow.js"></script>
 
     <script>
       // Get the tail element
@@ -56,7 +54,7 @@
         tail_x = event.pageX;
         tail_y = event.pageY;
         tail.style.left = tail_x - 100 + "px";
-        tail.style.top = tail_y - 50 + "px";
+        tail.style.top = tail_y - 100 + "px";
       });
     </script>
   </body>
