Cleaning up a little

--- a/Project_prototype/index.html
+++ b/Project_prototype/index.html
@@ -41,7 +41,7 @@
     </script>
 
     <div id="tail"><div class="child" id="sketch1"></div></div>
-    <script src=".\arrow.js"></script>
+    <script src=".\content.js"></script>
 
     <script>
       // Get the tail element
