--- a/Project_prototype_main/popup.html
+++ b/Project_prototype_main/popup.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
+    <div class="showArrow">
+        <button for="arrow-show">TURN ON</button>
+    </div>
     <h1>Adjust Arrow Settings</h1>
     <div>
       <label for="arrow-size">Size:</label>
