Fixed Size, settings still broken

--- a/Project_prototype_main/popup.html
+++ b/Project_prototype_main/popup.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <div class="showArrow">
+    <!-- <div class="showArrow">
         <button for="arrow-show">TURN ON</button>
-    </div>
+    </div> -->
     <h1>Adjust Arrow Settings</h1>
     <div>
       <label for="arrow-size">Size:</label>
-      <input type="range" id="arrow-size" name="arrow-size" min="1" max="10" />
+      <input type="range" id="arrow-size" name="arrow-size" min="1" max="100" value='1'/>
     </div>
     <div>
       <label for="arrow-color">Color:</label>
